crates/tests/src/snapshots/fe_compiler_tests__compile_errors__duplicate_var_in_child_scope.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: a variable with the same name already exists in this scope
  ┌─ compile_errors/duplicate_var_in_child_scope.fe:6:13
  │
6 │             sum: u256 = 0
  │             ^^^ Conflicting definition of `sum` variables
  │
  = Note: Give one of the `sum` variables a different name


